# MashDB

./: .gitignore  CMakeLists.txt  CompilationGuide.md  DEVELOPERS.md  LICENSE  README.md
src/: createDatabase.cpp  createDatabase.h  main.cpp
src/Creation/: createDatabase.cpp  createDatabase.h  createTable.cpp  createTable.h
src/Operations/ChangeDB/: changeDB.cpp  changeDB.h
src/Operations/Creation/: createDatabase.cpp  createTable.cpp  createTable.h
src/Operations/CurrentDB/: currentDB.cpp  currentDB.h
src/Operations/Deletion/: deleteRow.cpp  deleteRow.h
src/Operations/Insertion/: insert.cpp  insert.h
src/Operations/Selection/: ResultFormatter.cpp  ResultFormatter.hpp  select.cpp  select.h
src/Operations/Update/: updateRow.cpp  updateRow.h
src/Parser/: conditionParser.cpp  conditionParser.h  parser.cpp  parser.h
